# tempfix

Robocon-2026/: LICENSE  README.md
Robocon-2026/blitz_ros/blitz/: CMakeLists.txt  package.xml
Robocon-2026/blitz_ros/blitz/blitz/: blitz.py  interfaces.py  packer.py  parser.py  src.code-workspace
Robocon-2026/blitz_ros/blitz/launch/: blitz.launch.py
Robocon-2026/gaylord_ino/: bnoPID.ino  joy_input.py  plsfollowthebottttttttttt.ino  test1.cpp  ultrasonic_sensor.cpp  wall_bot.ino  wall_bot_new.cpp
Robocon-2026/gaylord_ino/BestDistanc/: BestDistanc.ino
Robocon-2026/gaylord_ino/FinalMovinBotNigga/: FinalMovinBotNigga.ino
Robocon-2026/gaylord_ino/LidarDistTest/: LidarDistTest.ino
Robocon-2026/gaylord_ino/followbotwithbno/: followbotwithbno.ino
Robocon-2026/mcu_pio/: platformio.ini
Robocon-2026/mcu_pio/include/: include_all.cpp
Robocon-2026/mcu_pio/include/constants/: constants.cpp  wall_const.cpp
Robocon-2026/mcu_pio/include/functions/: SetMotorSpeed.cpp  functions.txt  store_data.cpp  timer_cb.cpp
Robocon-2026/mcu_pio/include/pinmap/: PinMap_base.h
Robocon-2026/mcu_pio/include/read_write/: read_write.txt
Robocon-2026/mcu_pio/lib/Blitz/: blitz.hpp  blitz_interfaces.hpp
Robocon-2026/mcu_pio/lib/Timer/: blitz_timer.cpp
Robocon-2026/mcu_pio/src/: main.cpp
Robocon-2026/my_custom_interfaces/: CMakeLists.txt  package.xml
Robocon-2026/my_custom_interfaces/msg/: BnoReading.msg  Pwm.msg
Robocon-2026/nigger/: package.xml  setup.cfg  setup.py
Robocon-2026/nigger/nigger/: wall_follow.py
